--- a/css/skin.css
+++ b/css/skin.css
@@ -1,8 +1,6 @@
 .player-controller {
   background-color: black;
   opacity: 0.5;
-  height: 15%;
-  transform: translateY(-100%);
   transition: visibility 0s linear 0.7s, opacity 0.7s ease-in-out;
 }
 
@@ -110,4 +108,10 @@
   width: 25%;
   top: 15%;
   left: 2%;
+}
+
+@media (max-width: 850px) {
+  .player-timeline-container {
+    display: none;
+  }
 }
