--- a/css/skin.css
+++ b/css/skin.css
@@ -100,6 +100,30 @@
   background-color: rgb(15,186,240);
 }
 
+.player-btn-big {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 96%;
+  height: 96%;
+  margin: 2%;
+  z-index: 20;
+  opacity: 0.5;
+  border-radius: 40px;
+  background: url('svg/media-play.svg') center no-repeat;  
+  background-size: 70% 70%;
+  background-color: white;
+  cursor: pointer;
+}
+
+.player-btn-big-hidden {
+  display: none;
+}
+
+.player-btn-big-visible {
+  display: block;
+}
+
 .player-logo {
   position: absolute;
   background: url('svg/eyevinnlogo.png') no-repeat;
