--- a/styles/skin.scss
+++ b/styles/skin.scss
@@ -63,13 +63,13 @@
 }
 
 .player-btn-play {
-  background: url('svg/media-play.svg') center no-repeat;
+  background: url('../icons/media-play.svg') center no-repeat;
   background-size: 75% 75%;
   background-color: white;
 }
 
 .player-btn-pause {
-  background: url('svg/media-pause.svg') center no-repeat;
+  background: url('../icons/media-pause.svg') center no-repeat;
   background-size: 75% 75%;
   background-color: white;
 }
@@ -85,15 +85,15 @@
 }
 
 .player-btn-audio-on {
-  background: url('svg/volume-high.svg') center no-repeat;
+  background: url('../icons/volume-high.svg') center no-repeat;
   background-size: 70% 70%;
   background-color: white;
 }
 
 .player-btn-audio-off {
-  background: url('svg/volume-off.svg') center no-repeat;
+  background: url('../icons/volume-off.svg') center no-repeat;
   background-size: 70% 70%;
-  background-color: white;  
+  background-color: white;
 }
 
 .player-btn-hover {
@@ -110,7 +110,7 @@
   z-index: 20;
   opacity: 0.5;
   border-radius: 40px;
-  background: url('svg/media-play.svg') center no-repeat;  
+  background: url('../icons/media-play.svg') center no-repeat;
   background-size: 70% 70%;
   background-color: white;
   cursor: pointer;
@@ -126,7 +126,7 @@
 
 .player-logo {
   position: absolute;
-  background: url('svg/eyevinnlogo.png') no-repeat;
+  background: url('../icons/eyevinnlogo.png') no-repeat;
   background-size: 100% 100%;
   height: 70%;
   width: 25%;
